# glorious

./: .coderabbit.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.5.0  AGENT-TOOLS.md  AGENTIC_WORKFLOW.md  AGENTS.md  ARTIFACT_STORAGE_FIX.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  INIT_SUPPORT.md  LICENSE  ONBOARDING_PLAN.md  PLANNER_SKILL_SUMMARY.md  PROJECT_PLANS_SUMMARY.md  PYPI_PUBLISHING_PLAN.md  QUICKSTART.md  README.md  RELEASING.md  SKILLS_DOCUMENTATION_PLAN.md  TESTING.md  TEST_COVERAGE_MATRIX.md  TEST_GENERATION_SUMMARY.md  VERSION_SCHEME.md  base.md  install-skills.sh  issues.db  issues.jsonl  json  major-refactoring-sonnet.md  major-refactoring.md  pyproject.toml  raw.md  ruff.toml  run-ci-tests.sh
example-skills/ai/: README.md  pyproject.toml
example-skills/ai/src/glorious_ai/: instructions.md  skill.json  skill.py  usage.md
example-skills/issues/: .gitignore  README.md  alembic.ini  coverage.json  pyproject.toml  test_memory_leak_cli.py  test_memory_monitor.py  test_memory_simple.py
example-skills/issues/.github/workflows/: coverage.yml
example-skills/issues/.issues/templates/: analyze-codebase.md  best-practices-analysis.md
example-skills/issues/.work/agent/: analysis-feature-parity.md  cli-specification.md  implementation-status.md  test-scenarios.md
example-skills/issues/scripts/: build.py  run_tests.py
example-skills/issues/src/glorious_skill_issues/: __init__.py  instructions.md  schema.sql  skill.json  skill.py  usage.md
example-skills/issues/src/issue_tracker/: __init__.py  logging_config.py  skill.py
example-skills/issues/tests/: test_dep.py
example-skills/issues/tests/integration/: test_bulk_operations.py  test_comment_repository.py  test_dependency_model.py  test_issue_graph_repository.py  test_issue_repository.py  test_team_collaboration.py
example-skills/issues/tests/unit/: test_additional.py  test_cli_dependencies.py  test_cli_formatters.py  test_cli_labels.py  test_cli_list.py  test_cli_main.py  test_cli_new_commands.py  test_cli_stats_bulk_info.py  test_cli_update_close_delete.py  test_cli_validation.py  test_data_model.py  test_domain_utils.py  test_entity_utils.py  test_instruction_template.py  test_issue_comprehensive.py  test_issue_stats_service.py  test_templates.py  test_unit_of_work.py
example-skills/prompts/: pyproject.toml
example-skills/prompts/src/glorious_prompts/: __init__.py  schema.sql  skill.py
skills/automations/: pyproject.toml
skills/automations/src/glorious_automations/: schema.sql  skill.py
skills/code-atlas/: .coverage  .env  README.md  code_index.json  coverage.xml  pyproject.toml  test_index.json
skills/code-atlas/.github/prompts/: best-practices-check.prompt.md
skills/code-atlas/.github/workflows/: pypi-publish.yml
skills/code-atlas/.issues/: config.json  issues.db  issues.jsonl
skills/code-atlas/.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  (+230 more)
skills/code-atlas/.ruff_cache/0.14.4/: 3060861638882866814  3889087914481269361  6407864753323789042  (+2 more)
skills/code-atlas/.work/: test_index.json  watch_test.json
skills/code-atlas/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_ac1e31b4608cf52b___init___py.html  z_ac1e31b4608cf52b_agent_adapter_py.html  z_ac1e31b4608cf52b_cache_py.html  z_ac1e31b4608cf52b_query_py.html  z_ac1e31b4608cf52b_rules_py.html  z_ac1e31b4608cf52b_scanner_py.html  z_ac1e31b4608cf52b_scoring_py.html  z_ac1e31b4608cf52b_utils_py.html
skills/code-atlas/scripts/: build.py
skills/code-atlas/tests/: test_cache.py  test_scanner.py
skills/issues/: .coverage  .env  README.md  coverage.xml  pyproject.toml  test_engine_leak_fix.py
skills/issues/.issues/: issues.db  issues.jsonl
skills/issues/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_001198b855ac444d___init___py.html  z_001198b855ac444d_engine_py.html  z_001198b855ac444d_models_py.html  z_001198b855ac444d_unit_of_work_py.html  z_2166aabf37d5d7c1___init___py.html  z_2166aabf37d5d7c1_comment_repository_py.html  z_2166aabf37d5d7c1_issue_graph_repository_py.html  z_2166aabf37d5d7c1_issue_repository_py.html  z_3f1308e28d7daa85___init___py.html  z_3f1308e28d7daa85_comment_py.html  z_3f1308e28d7daa85_dependency_py.html  z_3f1308e28d7daa85_epic_py.html  z_3f1308e28d7daa85_issue_py.html  z_3f1308e28d7daa85_label_py.html  z_7982e110a3266c03___init___py.html  z_7982e110a3266c03_logging_config_py.html  z_8c098aa671816402___init___py.html  z_b272a517d35eb92d___init___py.html  z_b272a517d35eb92d_issue_graph_service_py.html  z_b272a517d35eb92d_issue_service_py.html  z_b272a517d35eb92d_issue_stats_service_py.html  z_b510e52935ef1d94___init___py.html  z_b510e52935ef1d94_exceptions_py.html  z_b510e52935ef1d94_utils_py.html  z_b510e52935ef1d94_value_objects_py.html  z_b5e946cda5c8a025___init___py.html  z_b5e946cda5c8a025_settings_py.html  z_b6ea7211e88cdfce___init___py.html  z_b6ea7211e88cdfce___main___py.html  z_b6ea7211e88cdfce_app_py.html  z_b6ea7211e88cdfce_dependencies_py.html  z_b6ea7211e88cdfce_error_handling_py.html  z_b6ea7211e88cdfce_formatters_py.html  z_b6ea7211e88cdfce_logging_utils_py.html  z_b6ea7211e88cdfce_rich_output_py.html  z_b6ea7211e88cdfce_validation_py.html  (+17 more)
skills/issues/tests/: conftest.py  test_stale.py
(+3913 files in other folders)
