[project]
name = "glorious-agents"
version = "0.2.0"
description = "Modular skill-based agent framework with shared SQLite database"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Thomas Weholt", email = "thomas@weholt.org"}
]
keywords = ["agents", "ai", "framework", "skills", "modular", "sqlite", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/weholt/glorious-agents", Documentation = "https://github.com/weholt/glorious-agents#readme", "Bug Reports" = "https://github.com/weholt/glorious-agents/issues"}
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tomli-w>=1.0.0",
    "ruff>=0.14.5",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "bandit>=1.7.0",
]

# Individual skills - Install via: uv pip install -e ".[notes,planner,issues]"
ai = ["glorious-ai>=0.1.0"]
automations = ["glorious-automations>=0.1.0"]
cache = ["glorious-cache>=0.1.0"]
code-atlas = ["code-atlas>=0.1.0"]
docs = ["glorious-skill-docs>=0.1.0"]
feedback = ["glorious-feedback>=0.1.0"]
issues = ["issue-tracker>=0.1.0"]
linker = ["glorious-linker>=0.1.0"]
migrate = ["glorious-migrate>=0.1.0"]
notes = ["glorious-skill-notes>=0.1.0"]
orchestrator = ["glorious-orchestrator>=0.1.0"]
planner = ["glorious-planner>=0.1.0"]
prompts = ["glorious-prompts>=0.1.0"]
sandbox = ["glorious-sandbox>=0.1.0"]
telemetry = ["glorious-telemetry>=0.1.0"]
temporal = ["glorious-temporal>=0.1.0"]
vacuum = ["glorious-vacuum>=0.1.0"]

# Convenience groups
all-skills = [
    "glorious-ai>=0.1.0",
    "glorious-automations>=0.1.0",
    "glorious-cache>=0.1.0",
    "code-atlas>=0.1.0",
    "glorious-skill-docs>=0.1.0",
    "glorious-feedback>=0.1.0",
    "issue-tracker>=0.1.0",
    "glorious-linker>=0.1.0",
    "glorious-migrate>=0.1.0",
    "glorious-skill-notes>=0.1.0",
    "glorious-orchestrator>=0.1.0",
    "glorious-planner>=0.1.0",
    "glorious-prompts>=0.1.0",
    "glorious-sandbox>=0.1.0",
    "glorious-telemetry>=0.1.0",
    "glorious-temporal>=0.1.0",
    "glorious-vacuum>=0.1.0",
]

[project.scripts]
agent = "glorious_agents.cli:main"

[project.entry-points."glorious_agents.skills"]
# External skills can be registered here

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glorious_agents"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "logic: unit tests of pure logic (domain/services)",
  "integration: tests involving real I/O or external systems",
]
addopts = """
  -q
  --strict-markers
  --disable-warnings
  --cov=src
  --cov-report=term-missing
  --cov-report=html
  --cov-fail-under=70
"""

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "*/__main__.py",
  "*/tests/*",
  "*/cli.py",
  "*/skills_cli.py",
  "*/identity_cli.py",
  "*/daemon.py",
  "*/skills_cli/*",
  "*/migrations.py",
  "*/skills/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if 0:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "PYI", "PT"]
ignore = ["E501", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "src/glorious_agents/skills/.*/src/",
    "src/glorious_agents/skills/.*/test_.*\\.py",
    "scripts/build.py",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-jsonschema>=4.25.1.20251009",
]

[tool.uv.sources]
# Local skill packages for development
glorious-ai = { path = "src/glorious_agents/skills/ai", editable = true }
glorious-automations = { path = "src/glorious_agents/skills/automations", editable = true }
glorious-cache = { path = "src/glorious_agents/skills/cache", editable = true }
code-atlas = { path = "src/glorious_agents/skills/code-atlas", editable = true }
glorious-skill-docs = { path = "src/glorious_agents/skills/docs", editable = true }
glorious-feedback = { path = "src/glorious_agents/skills/feedback", editable = true }
issue-tracker = { path = "src/glorious_agents/skills/issues", editable = true }
glorious-linker = { path = "src/glorious_agents/skills/linker", editable = true }
glorious-migrate = { path = "src/glorious_agents/skills/migrate", editable = true }
glorious-skill-notes = { path = "src/glorious_agents/skills/notes", editable = true }
glorious-orchestrator = { path = "src/glorious_agents/skills/orchestrator", editable = true }
glorious-planner = { path = "src/glorious_agents/skills/planner", editable = true }
glorious-prompts = { path = "src/glorious_agents/skills/prompts", editable = true }
glorious-sandbox = { path = "src/glorious_agents/skills/sandbox", editable = true }
glorious-telemetry = { path = "src/glorious_agents/skills/telemetry", editable = true }
glorious-temporal = { path = "src/glorious_agents/skills/temporal", editable = true }
glorious-vacuum = { path = "src/glorious_agents/skills/vacuum", editable = true }
