[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-ai"
version = "0.1.0"
description = "AI skill for Glorious Agents - LLM integration with embeddings and semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Glorious Agents Team"}
]
dependencies = [
    "glorious-agents>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."glorious_agents.skills"]
ai = "glorious_ai.skill:app"
