[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-prompts"
version = "0.1.0"
description = "Prompt Registry - template management and versioning"
requires-python = ">=3.11"
dependencies = ["glorious-agents>=0.1.0"]

[project.entry-points."glorious_agents.skills"]
prompts = "glorious_prompts.skill:app"
