[project]
name = "issue-tracker"
version = "0.1.0"
description = "Git-backed issue tracking with hash IDs, hierarchical relationships, and MCP server"
authors = [{name = "DotWork Team"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "sqlmodel>=0.0.16",
    "gitpython>=3.1.40",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "aiohttp>=3.13.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
agentmail = ["redis>=5.0.0"]
postgres = ["psycopg2-binary>=2.9.9"]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.26.0",
    "ruff>=0.1.9",
    "mypy>=1.7.1",
    "alembic>=1.13.0",
    "types-setuptools>=69.0.0",
]

[project.scripts]
issues = "issue_tracker.cli.__main__:main"

[project.entry-points."glorious_agents.skills"]
issues = "issue_tracker.skill:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "issue_tracker.adapters.db.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--timeout=5"
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "alembic>=1.17.1",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.4",
    "types-psutil>=7.0.0.20251111",
]
