[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-automations"
version = "0.1.0"
description = "Automations skill for Glorious Agents - declarative event-driven automation engine"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Thomas Weholt", email = "thomas@weholt.org"}
]
dependencies = [
    "glorious-agents>=0.1.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."glorious_agents.skills"]
automations = "glorious_automations.skill:app"
