[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-feedback"
version = "0.1.0"
description = "Feedback tracking - action outcome logging"
requires-python = ">=3.11"
dependencies = ["glorious-agents>=0.1.0"]

[project.entry-points."glorious_agents.skills"]
feedback = "glorious_feedback.skill:app"
