[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-feedback"
version = "0.1.0"
description = "Feedback tracking - action outcome logging"
requires-python = ">=3.12"
dependencies = [
    "glorious-agents>=0.1.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."glorious_agents.skills"]
feedback = "glorious_feedback.skill:app"
