[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-linker"
version = "0.1.0"
description = "Linker skill for Glorious Agents - semantic cross-references between entities"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Thomas Weholt", email = "thomas@weholt.org"}
]
dependencies = [
    "glorious-agents>=0.1.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."glorious_agents.skills"]
linker = "glorious_linker.skill:app"
