[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-orchestrator"
version = "0.1.0"
description = "Orchestration - intent routing and workflows"
requires-python = ">=3.12"
dependencies = [
    "glorious-agents>=0.1.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.0",
]

[project.entry-points."glorious_agents.skills"]
orchestrator = "glorious_orchestrator.skill:app"
