[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-planner"
version = "0.1.0"
description = "Planner skill for Glorious Agents - action queue management and task prioritization"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Thomas Weholt", email = "thomas@weholt.org"}
]
dependencies = [
    "glorious-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."glorious_agents.skills"]
planner = "glorious_planner.skill:app"
