[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glorious-telemetry"
version = "0.1.0"
description = "Telemetry skill - agent action logging and observability"
requires-python = ">=3.12"
dependencies = ["glorious-agents>=0.1.0"]

[project.entry-points."glorious_agents.skills"]
telemetry = "glorious_telemetry.skill:app"
